# OmniEdge_AI

./: OmniEdge_AI_Architecture.md  README.md  audit-report.md  omniedge_architecture.wsd  run_all.sh  run_beautymode.sh  run_beutimode.sh  run_conversation.sh  run_security_mode.sh
modules/common/: CMakeLists.txt
modules/common/cmake/: OmniEdgeHelpers.cmake  cuda_probe.cu
modules/common/include/common/: cv_config_loader.hpp  diagnostic_ring.hpp  error_codes.hpp  event_bus.hpp  file.hpp  hf_model_fetcher.hpp  ini_config.hpp  model_path.hpp  module_node_base.hpp  oe_logger.hpp  oe_module_main.hpp  oe_node_main.hpp  oe_onnx_helpers.hpp  oe_onnx_io_binding.hpp  oe_shm_helpers.hpp  oe_tracy.hpp  onnx_session_handle.hpp  pipeline_types.hpp  platform_detect.hpp  runtime_defaults.hpp  shm_tts_header.hpp  signal_shutdown.hpp  string_hash.hpp  subprocess_manager.hpp  time_utils.hpp  ui_action.hpp  validated_config.hpp  zmq_messages.hpp
modules/common/src/: diagnostic_ring.cpp  file.cpp  hf_model_fetcher.cpp  oe_logger.cpp  subprocess_manager.cpp
modules/core/audio_denoise/: CMakeLists.txt
modules/core/audio_denoise/src/: onnx_dtln_inferencer.cpp
modules/core/conversation/: CMakeLists.txt
modules/core/conversation/src/: audio_accumulator.cpp  gemma_e4b_inferencer_stub.cpp  gemma_inferencer.cpp  gemma_inferencer_stub.cpp  model_generate.py  qwen_omni_inferencer_stub.cpp
modules/core/cv/: CMakeLists.txt
modules/core/graph/: CMakeLists.txt
modules/core/ingest/: CMakeLists.txt
modules/core/pipeline_orchestrator/: CMakeLists.txt
modules/core/statemachine/: CMakeLists.txt
modules/core/stt/: CMakeLists.txt
modules/core/tts/: CMakeLists.txt
modules/hal/gpu/: CMakeLists.txt
modules/hal/vram/: CMakeLists.txt
modules/interfaces/: CMakeLists.txt
modules/interfaces/include/: audio_denoise_inferencer.hpp  beauty_inferencer.hpp  blur_inferencer.hpp  conversation_inferencer.hpp  denoise_inferencer.hpp  face_filter_inferencer.hpp  face_recog_inferencer.hpp  sam2_inferencer.hpp  security_inferencer.hpp  stt_inferencer.hpp  tts_inferencer.hpp
modules/nodes/audio_denoise/: CMakeLists.txt
modules/nodes/conversation/: CMakeLists.txt
modules/nodes/cv/: CMakeLists.txt
modules/nodes/ingest/: CMakeLists.txt
modules/nodes/orchestrator/: CMakeLists.txt
modules/nodes/stt/: CMakeLists.txt
modules/nodes/tts/: CMakeLists.txt
modules/nodes/ws_bridge/: CMakeLists.txt
modules/transport/shm/: CMakeLists.txt
modules/transport/ws/: CMakeLists.txt
modules/transport/zmq/: CMakeLists.txt
tests/core/: CMakeLists.txt
tests/core/common/: CMakeLists.txt  test_oe_logger.cpp  test_ui_action.cpp
tests/core/cv/: CMakeLists.txt  test_face_filter_benchmark.cpp  test_face_filter_stub.cpp  test_face_gallery_sqlite.cpp  test_security_detection_annotator.cpp  test_security_event_logger.cpp  test_security_recorder.cpp  test_vision_worker_client.cpp
tests/core/graph/: CMakeLists.txt  test_core_pipeline_graph.cpp  test_edge_state_machine.cpp  test_graph_diff.cpp  test_graph_serialization.cpp  test_graph_topology.cpp  test_graph_validator.cpp  test_pipeline_edge.cpp  test_pipeline_vertex.cpp
tests/core/pipeline_orchestrator/: CMakeLists.txt  test_crash_handler.cpp  test_pipeline_orchestrator.cpp  test_switch_plan.cpp
tests/core/statemachine/: CMakeLists.txt  test_prompt_assembler.cpp  test_session_persistence.cpp  test_state_machine.cpp
tests/core/stt/: CMakeLists.txt  test_hallucination_filter.cpp  test_mel_spectrogram.cpp
tests/core/tts/: CMakeLists.txt  test_sentence_splitter.cpp
tests/integration/: CMakeLists.txt
tests/integration/hal/: CMakeLists.txt  test_cuda_fence.cpp  test_cuda_guard.cpp  test_gpu_compositor.cu  test_gpu_diagnostics.cpp  test_gpu_tier_probe.cpp  test_pinned_staging_buffer.cpp  test_vram_gate.cpp  test_vram_tracker.cpp
tests/integration/inferencers/: CMakeLists.txt  test_onnx_kokoro_inferencer.cpp  test_real_speech_transcription.cpp  test_trt_whisper_inferencer.cpp
tests/integration/pipeline/: CMakeLists.txt  download_test_media.sh  generate_test_data.sh  ground_truth.json  test_audio_pipeline_e2e.cpp  test_image_upload_e2e.py  test_video_pipeline_e2e.cpp
tests/integration/transport/: CMakeLists.txt  test_message_router.cpp  test_shm_circular_buffer.cpp  test_shm_double_buffer.cpp  test_shm_jpeg_transport.cpp  test_shm_mapping.cpp  test_transport_edge_cases.cpp  test_zmq_publisher.cpp  test_zmq_subscriber.cpp
tests/interfaces/: CMakeLists.txt  test_interface_edge_cases.cpp
tests/interfaces/cv/: CMakeLists.txt  cv_test_helpers.hpp  test_blur_api.cpp  test_blur_isp_pipeline.cpp  test_face_detection_api.cpp  test_face_matching.cpp  test_onnx_face_recog_inferencer.cpp  test_sam2_api.cpp
tests/interfaces/stt/: CMakeLists.txt  test_stt_empty_output.cpp
tests/interfaces/tts/: CMakeLists.txt  test_tts_degraded_inferencer.cpp
tests/interfaces/ws_bridge/: CMakeLists.txt  test_ws_command_validation.cpp
tests/nodes/: CMakeLists.txt
tests/nodes/audio_denoise/: CMakeLists.txt  test_audio_denoise_node.cpp
tests/nodes/conversation/: CMakeLists.txt  test_conversation_benchmark.cpp  test_conversation_node.cpp  test_conversation_params.cpp  test_e2e_ingest_conversation.cpp
tests/nodes/cv/: CMakeLists.txt  test_blur_deadline_fallback.cpp  test_face_filter_integration.cpp  test_face_recog_integration.cpp  test_sam2_benchmark.cpp  test_sam2_integration.cpp  test_security_vlm_node.cpp  test_video_denoise_benchmark.cpp  test_video_denoise_node.cpp
tests/nodes/ingest/: CMakeLists.txt  test_audio_ingest_node.cpp  test_snapshot_command.cpp  test_video_ingest_node.cpp
tests/nodes/orchestrator/: CMakeLists.txt  test_gpu_profiler.cpp  test_graph_builder.cpp  test_module_launcher.cpp  test_omniedge_orchestrator.cpp  test_pipeline_graph.cpp  test_pipeline_graph_switch.cpp  test_priority_scheduler.cpp  test_profile_transitions.cpp
tests/nodes/stt/: CMakeLists.txt  test_stt_node.cpp
tests/nodes/tts/: CMakeLists.txt  test_tts_node.cpp
tests/nodes/ws_bridge/: CMakeLists.txt  test_frame_pacing.cpp  test_websocket_bridge_node.cpp  test_ws_bridge_relay.cpp
(+301 files in other folders)
