# =========================================================================
# tests/core — Pure algorithm unit tests
#
# Link: core + interfaces only. No transport, no hal.
# Aggregates subdirectories in alphabetical order.
# =========================================================================

# =========================================================================
# Subdirectories
# =========================================================================
add_subdirectory(common)
add_subdirectory(cv)
add_subdirectory(graph)
add_subdirectory(pipeline_orchestrator)
add_subdirectory(stt)
add_subdirectory(statemachine)
add_subdirectory(tts)
