# =========================================================================
# tests/nodes — Wiring tests using mocks injected via interfaces
#
# Link: mocks + interfaces + node _common libs
# Aggregates subdirectories in alphabetical order.
# =========================================================================

add_subdirectory(audio_denoise)
add_subdirectory(conversation)
add_subdirectory(cv)
add_subdirectory(ingest)
add_subdirectory(orchestrator)
add_subdirectory(stt)
add_subdirectory(tts)
add_subdirectory(ws_bridge)
